# advent-of-code

./: .gitignore  2018-times.txt  2020-times.txt  2021-times.txt  2022-times.txt  Cargo.toml  gen_boilerplate  get_day_year  get_file  get_file.sh  get_file_prev_year  get_file_prev_year.sh  run  run-2019  run-2024  setup  times.txt
2018/day01/: Cargo.toml
2018/day01/src/: lib.rs  main.rs
2018/day02/: Cargo.toml
2018/day02/src/: lib.rs  main.rs
2018/day03/: Cargo.toml
2018/day03/src/: lib.rs  main.rs
2018/day04/: Cargo.toml
2018/day04/src/: lib.rs  main.rs
2018/day05/: Cargo.toml
2018/day05/src/: lib.rs  main.rs
2018/day06/: Cargo.toml
2018/day06/src/: lib.rs  main.rs
2018/day07/: Cargo.toml
2018/day07/src/: lib.rs  main.rs
2018/day08/: Cargo.toml
2018/day08/src/: lib.rs  main.rs
2018/day09/: Cargo.toml
2018/day09/src/: lib.rs  main.rs
2018/day10/: Cargo.toml
2018/day10/src/: lib.rs  main.rs
2018/day11/: Cargo.toml
2018/day11/src/: lib.rs  main.rs
2018/day12/: Cargo.toml
2018/day13/: Cargo.toml
2018/day14/: Cargo.toml
2018/day15/: Cargo.toml
2018/day16/: Cargo.toml
2018/day17/: Cargo.toml
2018/day18/: Cargo.toml
2018/day19/: Cargo.toml
2018/day20/: Cargo.toml
2018/day21/: Cargo.toml
2018/day22/: Cargo.toml
2018/day23/: Cargo.toml
2018/day24/: Cargo.toml
2018/day25/: Cargo.toml
2018/wrist_device/: Cargo.toml
2019/day01/: Cargo.toml
2019/day02/: Cargo.toml
2019/day03/: Cargo.toml
2019/day04/: Cargo.toml
2019/day05/: Cargo.toml
2019/day06/: Cargo.toml
2019/day07/: Cargo.toml
2019/day08/: Cargo.toml
2019/day09/: Cargo.toml
2019/day10/: Cargo.toml
2019/day11/: Cargo.toml
2019/day12/: Cargo.toml
2019/day13/: Cargo.toml
2019/day14/: Cargo.toml
2019/day15/: Cargo.toml
2019/day16/: Cargo.toml  test.ts
2019/day17/: Cargo.toml
2019/day18/: Cargo.toml
2019/day19/: Cargo.toml
2019/day2/: Cargo.toml
2019/day20/: Cargo.toml
2019/day21/: Cargo.toml
2019/day22/: Cargo.toml
2019/day23/: Cargo.toml
2019/day24/: Cargo.toml
2019/day25/: Cargo.toml
2019/day9/: Cargo.toml
2019/intcode/: Cargo.toml
2020/day01/: Cargo.toml
2020/day02/: Cargo.toml
2020/day03/: Cargo.toml
2020/day04/: Cargo.toml
2020/day05/: Cargo.toml
2020/day06/: Cargo.toml
2020/day07/: Cargo.toml
2020/day08/: Cargo.toml
2020/day09/: Cargo.toml
2020/day10/: Cargo.toml
2020/day11/: Cargo.toml
2020/day12/: Cargo.toml
2020/day13/: Cargo.toml
2020/day14/: Cargo.toml
2020/day15/: Cargo.toml
2020/day16/: Cargo.toml
2020/day17/: Cargo.toml
2020/day18/: Cargo.toml
2020/day19/: Cargo.toml
2020/day20/: Cargo.toml
2020/day21/: Cargo.toml
2020/day22/: Cargo.toml
2020/day23/: Cargo.toml
2020/day24/: Cargo.toml
2020/day25/: Cargo.toml
2021/day08/: Cargo.toml
2021/day09/: Cargo.toml
2021/day10/: Cargo.toml
2021/day11/: Cargo.toml
2021/day12/: Cargo.toml
2021/day13/: Cargo.toml
2021/day14/: Cargo.toml
2021/day15/: Cargo.toml
2021/day16/: Cargo.toml
2021/day17/: Cargo.toml
2021/day18/: Cargo.toml
2021/day19/: Cargo.toml
2021/day20/: Cargo.toml
2021/day21/: Cargo.toml
2021/day22/: Cargo.toml
2021/day23/: Cargo.toml
2021/day24/: Cargo.toml
2021/day25/: Cargo.toml
2022/day01/: Cargo.toml
2022/day02/: Cargo.toml
2022/day16/: Cargo.toml
2022/day17/: Cargo.toml
2022/day18/: Cargo.toml
2022/day19/: Cargo.toml
2022/day2/: Cargo.toml
2022/day20/: Cargo.toml
2022/day21/: Cargo.toml
2022/day22/: Cargo.toml
2022/day23/: Cargo.toml
2022/day24/: Cargo.toml
2022/day25/: Cargo.toml
2023/day12/: Cargo.toml
2023/day21/: Cargo.toml
2023/day24/: Cargo.toml
2023/day25/: Cargo.toml
2024/day01/: Cargo.toml
2024/day02/: Cargo.toml
2024/day03/: Cargo.toml
2024/day04/: Cargo.toml
2024/day05/: Cargo.toml
2024/day06/: Cargo.toml
2024/day07/: Cargo.toml
2024/day08/: Cargo.toml
2024/day09/: Cargo.toml
2024/day10/: Cargo.toml
2024/day11/: Cargo.toml
2024/day12/: Cargo.toml
2024/day13/: Cargo.toml
2024/day14/: Cargo.toml
2024/day15/: Cargo.toml
2024/day16/: Cargo.toml
2024/day17/: Cargo.toml
2024/day18/: Cargo.toml
2024/day19/: Cargo.toml
2024/day20/: Cargo.toml
2024/day21/: Cargo.toml
2024/day22/: Cargo.toml
2024/day23/: Cargo.toml
2024/day24/: Cargo.toml
2024/day25/: Cargo.toml
bench/: .gitignore  Cargo.toml
bench/src/: bench.rs  bench2018.rs  bench2019.rs  bench2020.rs  bench2021.rs  bench2022.rs  bench2024.rs  separate_bench.rs
day01/: Cargo.toml
day01/src/: count.rs  lib.rs  main.rs  pair.rs
day02/: Cargo.toml
day02/src/: lib.rs  main.rs
day03/: Cargo.toml
day03/src/: lib.rs  main.rs
day04/: Cargo.toml
day04/src/: lib.rs  main.rs
day05/: Cargo.toml
day05/src/: lib.rs  main.rs
day06/: Cargo.toml
day06/src/: lib.rs  main.rs
day07/: Cargo.toml
day07/src/: lib.rs  main.rs
day08/: Cargo.toml
day08/src/: lib.rs  main.rs
day09/: Cargo.toml
day09/src/: lib.rs  main.rs
day1/src/: main.rs
day10/: Cargo.toml
day10/src/: lib.rs  main.rs
day11/: Cargo.toml
day11/src/: lib.rs  main.rs
day12/: Cargo.toml
day12/src/: lib.rs  main.rs
day13/: Cargo.toml
day13/src/: lib.rs  main.rs
day14/: Cargo.toml
day14/src/: lib.rs  main.rs
day15/: Cargo.toml
day15/src/: lib.rs  main.rs
day16/: Cargo.toml
day16/src/: lib.rs  main.rs
day17/: Cargo.toml
day17/src/: lib.rs  main.rs
day18/: Cargo.toml
day18/src/: lib.rs  main.rs
day19/: Cargo.toml
day19/src/: lib.rs  main.rs
day2/src/: main.rs
day20/: Cargo.toml
day20/src/: lib.rs  main.rs
day21/: Cargo.toml
day21/src/: lib.rs  main.rs
day22/: Cargo.toml
day22/src/: lib.rs  main.rs
day23/: Cargo.toml
day23/src/: lib.rs  main.rs
day24/: Cargo.toml
day24/src/: lib.rs  main.rs
day25/: Cargo.toml
day25/src/: lib.rs  main.rs
day3/src/: main.rs
day4/src/: main.rs
day5/src/: main.rs
day6/src/: main.rs
day7/src/: main.rs
day8/src/: main.rs
tools/: Cargo.toml
tools/src/: graph.rs  lib.rs
tools/template/: Cargo.toml
tools/template/src/: lib.rs  main.rs
(+258 files in other folders)
