[workspace]

members = [
    # 2024
    "day01", "day02", "day03", "day04", "day05",
    "day06", "day07", "day08", "day09", "day10",

    # 2023
    "2023/day12", "2023/day24", "2023/day25", "2023/day21",

    # 2022
    "2022/day01", "2022/day02", "2022/day16",

    # 2019
    "2019/day01", "2019/day02", "2019/day05", "2019/day09", "2019/day19" ,
    "2019/day21", "2019/day23",
]
