[workspace]

members = [
    "tools", "bench",

    # 2024
    "day01", "day02", "day03", "day04", "day05",
    "day06", "day07", "day08", "day09", "day10",
    "day11", "day12", "day13", "day14", "day15",
    "day16", "day17", "day18", "day19", "day20",
    "day21", "day22", "day23", "day24", "day25",

    # 2023
    "2023/day12", "2023/day24", "2023/day25", "2023/day21",

    # 2022
    "2022/day01", "2022/day02", "2022/day16",

    # 2019
    "2019/intcode",
    "2019/day01", "2019/day02", "2019/day03", "2019/day04", "2019/day05",
    "2019/day06",                             "2019/day09",
                                              "2019/day19",
    "2019/day21",               "2019/day23",               "2019/day25",
]
