[workspace]

members = [
    "tools", "bench",

    # 2024
    "2024/day01", "2024/day02", "2024/day03", "2024/day04", "2024/day05",
    "2024/day06", "2024/day07", "2024/day08", "2024/day09", "2024/day10",
    "2024/day11", "2024/day12", "2024/day13", "2024/day14", "2024/day15",
    "2024/day16", "2024/day17", "2024/day18", "2024/day19", "2024/day20",
    "2024/day21", "2024/day22", "2024/day23", "2024/day24", "2024/day25",

    # 2023
    "2023/day12", "2023/day24", "2023/day25", "2023/day21",

    # 2022
    "2022/day01", "2022/day02",
    

    "2022/day16", "2022/day17", "2022/day18", "2022/day19", "2022/day20",
    "2022/day21", "2022/day22", "2022/day23", "2022/day24", "2022/day25",

    #2021
                                "2021/day08", "2021/day09", "2021/day10",
    "2021/day11", "2021/day12", "2021/day13", "2021/day14", "2021/day15",
    "2021/day16", "2021/day17", "2021/day18", "2021/day19", "2021/day20",
    "2021/day21", "2021/day22", "2021/day23", "2021/day24", "2021/day25",

    # 2020
    "2020/day01", "2020/day02", "2020/day03", "2020/day04", "2020/day05",
    "2020/day06", "2020/day07", "2020/day08", "2020/day09", "2020/day10",
    "2020/day11", "2020/day12", "2020/day13", "2020/day14", "2020/day15",
    "2020/day16", "2020/day17", "2020/day18", "2020/day19", "2020/day20",
    "2020/day21", "2020/day22", "2020/day23", "2020/day24", "2020/day25",

    # 2019
    "2019/intcode",
    "2019/day01", "2019/day02", "2019/day03", "2019/day04", "2019/day05",
    "2019/day06", "2019/day07", "2019/day08", "2019/day09", "2019/day10",
    "2019/day11", "2019/day12", "2019/day13", "2019/day14", "2019/day15",
    "2019/day16", "2019/day17", "2019/day18", "2019/day19", "2019/day20",
    "2019/day21",               "2019/day23",               "2019/day25",
]

[profile.flamegraph]
inherits = "release"
debug = true
