[package]
name = "bench"
version = "0.1.0"
edition = "2021"

[dependencies]
day01 = { version = "0.1.0", path = "../day01" }
day02 = { version = "0.1.0", path = "../day02" }
day03 = { version = "0.1.0", path = "../day03" }
day04 = { version = "0.1.0", path = "../day04" }
day05 = { version = "0.1.0", path = "../day05" }
day06 = { version = "0.1.0", path = "../day06" }
day07 = { version = "0.1.0", path = "../day07" }
day08 = { version = "0.1.0", path = "../day08" }
day09 = { version = "0.1.0", path = "../day09" }
day10 = { version = "0.1.0", path = "../day10" }
day11 = { version = "0.1.0", path = "../day11" }
day12 = { version = "0.1.0", path = "../day12" }
day13 = { version = "0.1.0", path = "../day13" }

criterion = { version = "0.4", features = ["html_reports"] }
aoc_tools = { version = "0.1.0", path = "../tools" }

[[bench]]
name = "separate"
path = "src/separate_bench.rs"
harness = false

[[bench]]
name = "2024"
path = "src/bench2024.rs"
harness = false
