[package]
name = "bench"
version = "0.1.0"
edition = "2021"

[features]
arena = ["aoc_tools/arena"]

[dependencies]
day01 = { version = "0.1.0", path = "../day01" }
day02 = { version = "0.1.0", path = "../day02" }
day03 = { version = "0.1.0", path = "../day03" }
day04 = { version = "0.1.0", path = "../day04" }
day05 = { version = "0.1.0", path = "../day05" }
day06 = { version = "0.1.0", path = "../day06" }
day07 = { version = "0.1.0", path = "../day07" }
day08 = { version = "0.1.0", path = "../day08" }
day09 = { version = "0.1.0", path = "../day09" }
day10 = { version = "0.1.0", path = "../day10" }
day11 = { version = "0.1.0", path = "../day11" }
day12 = { version = "0.1.0", path = "../day12" }
day13 = { version = "0.1.0", path = "../day13" }
day14 = { version = "0.1.0", path = "../day14" }
day15 = { version = "0.1.0", path = "../day15" }
day16 = { version = "0.1.0", path = "../day16" }
day17 = { version = "0.1.0", path = "../day17" }
day18 = { version = "0.1.0", path = "../day18" }
day19 = { version = "0.1.0", path = "../day19" }
day20 = { version = "0.1.0", path = "../day20" }
day21 = { version = "0.1.0", path = "../day21" }
day22 = { version = "0.1.0", path = "../day22" }
day23 = { version = "0.1.0", path = "../day23" }
day24 = { version = "0.1.0", path = "../day24" }
day25 = { version = "0.1.0", path = "../day25" }

day01-2022 = { version = "0.1.0", path = "../2022/day01" }
day02-2022 = { version = "0.1.0", path = "../2022/day02" }
day16-2022 = { version = "0.1.0", path = "../2022/day16" }
day17-2022 = { version = "0.1.0", path = "../2022/day17" }
day18-2022 = { version = "0.1.0", path = "../2022/day18" }
day19-2022 = { version = "0.1.0", path = "../2022/day19" }
day20-2022 = { version = "0.1.0", path = "../2022/day20" }
day21-2022 = { version = "0.1.0", path = "../2022/day21" }
day23-2022 = { version = "0.1.0", path = "../2022/day23" }
day24-2022 = { version = "0.1.0", path = "../2022/day24" }

criterion = { version = "^0.5", path = "./criterion.rs", features = ["html_reports"] }
aoc_tools = { version = "0.1.0", path = "../tools" }

[[bench]]
name = "separate"
path = "src/separate_bench.rs"
harness = false

[[bench]]
name = "2024"
path = "src/bench2024.rs"
harness = false

# [[bench]]
# name = "2022"
# path = "src/bench2022.rs"
# harness = false
