[package]
name = "bench"
version = "0.1.0"
edition = "2021"

[features]
arena = ["aoc_tools/arena"]

[dependencies]
day01-2024 = { version = "0.1.0", path = "../2024/day01" }
day02-2024 = { version = "0.1.0", path = "../2024/day02" }
day03-2024 = { version = "0.1.0", path = "../2024/day03" }
day04-2024 = { version = "0.1.0", path = "../2024/day04" }
day05-2024 = { version = "0.1.0", path = "../2024/day05" }
day06-2024 = { version = "0.1.0", path = "../2024/day06" }
day07-2024 = { version = "0.1.0", path = "../2024/day07" }
day08-2024 = { version = "0.1.0", path = "../2024/day08" }
day09-2024 = { version = "0.1.0", path = "../2024/day09" }
day10-2024 = { version = "0.1.0", path = "../2024/day10" }
day11-2024 = { version = "0.1.0", path = "../2024/day11" }
day12-2024 = { version = "0.1.0", path = "../2024/day12" }
day13-2024 = { version = "0.1.0", path = "../2024/day13" }
day14-2024 = { version = "0.1.0", path = "../2024/day14" }
day15-2024 = { version = "0.1.0", path = "../2024/day15" }
day16-2024 = { version = "0.1.0", path = "../2024/day16" }
day17-2024 = { version = "0.1.0", path = "../2024/day17" }
day18-2024 = { version = "0.1.0", path = "../2024/day18" }
day19-2024 = { version = "0.1.0", path = "../2024/day19" }
day20-2024 = { version = "0.1.0", path = "../2024/day20" }
day21-2024 = { version = "0.1.0", path = "../2024/day21" }
day22-2024 = { version = "0.1.0", path = "../2024/day22" }
day23-2024 = { version = "0.1.0", path = "../2024/day23" }
day24-2024 = { version = "0.1.0", path = "../2024/day24" }
day25-2024 = { version = "0.1.0", path = "../2024/day25" }

day01-2022 = { version = "0.1.0", path = "../2022/day01" }
day02-2022 = { version = "0.1.0", path = "../2022/day02" }
day16-2022 = { version = "0.1.0", path = "../2022/day16" }
day17-2022 = { version = "0.1.0", path = "../2022/day17" }
day18-2022 = { version = "0.1.0", path = "../2022/day18" }
day19-2022 = { version = "0.1.0", path = "../2022/day19" }
day20-2022 = { version = "0.1.0", path = "../2022/day20" }
day21-2022 = { version = "0.1.0", path = "../2022/day21" }
day22-2022 = { version = "0.1.0", path = "../2022/day22" }
day23-2022 = { version = "0.1.0", path = "../2022/day23" }
day24-2022 = { version = "0.1.0", path = "../2022/day24" }
day25-2022 = { version = "0.1.0", path = "../2022/day25" }

criterion = { version = "^0.5", path = "./criterion.rs", features = ["html_reports"] }
aoc_tools = { version = "0.1.0", path = "../tools" }

[[bench]]
name = "separate"
path = "src/separate_bench.rs"
harness = false

[[bench]]
name = "2024"
path = "src/bench2024.rs"
harness = false

[[bench]]
name = "2022"
path = "src/bench2022.rs"
harness = false
